--- a/package.json
+++ b/package.json
@@ -16,23 +16,26 @@
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "react": "^19.1.1",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.5",
-    "sweetalert2": "^11.26.3",
-    "tailwindcss": "^4.1.17"
+    "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
+    "autoprefixer": "^10.4.22",
     "daisyui": "^5.4.7",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "vite": "^7.1.7"
   }
 }
