--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.9.5",
-    "sweetalert2": "^11.26.3"
+    "sweetalert2": "^11.26.3",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
